--- a/index.css
+++ b/index.css
@@ -8,12 +8,14 @@ body {
 }
 div {
     border: 1px solid salmon;
+    margin: 10px;
+    padding: 10px;
 }
 div.navbar {
     background-color: transparent;
     width: 99.9vw;
-    height: 6vh;
-
+    height: 50px;
+    padding: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -22,6 +24,6 @@ div.bar {
     padding: 6px;
      margin: 8px 40px 8px 40px;
 }
-img {
+.srodek {
     justify-content: center;
 }
