--- a/index.css
+++ b/index.css
@@ -20,10 +20,46 @@ div.navbar {
     align-items: center;
     justify-content: center;
 }
-div.bar {
-    padding: 6px;
-     margin: 8px 40px 8px 40px;
+a {
+    text-decoration: none;
+    color: whitesmoke;
 }
+.bar {
+    padding: 6px;
+     margin: 8px 3vw 8px 3vw;
+}
+.a::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: whitesmoke;
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+  }
+  
+  .bar:hover::before {
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+  
 .srodek {
     justify-content: center;
+    margin: auto;
+}
+.bezramki {
+    border: 0px transparent;
+}
+.kontener {
+    width: 700px;
+    max-width: 100%;
+    min-width: 20%;
+    margin: auto;
+}
+p.srodek {
+    margin-top: 10px;
 }
