--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 .navbar {
 border: 1px solid darksalmon;
 color: whitesmoke;
-background-color: darksalmon;
+background: linear-gradient(120deg, darksalmon, #E97A95);
 }
 .a {
     color: whitesmoke;
@@ -45,9 +45,41 @@ background-color: darksalmon;
   .custom-toggler.navbar-toggler {
     border-color: rgb(7, 7, 7, 0.80);
   } 
+.carousel-tytul{
+    color: black;
+    background-color: #ffffffa8;
+    border-radius: 10px;
+    padding: 3px;
+}
+.ranking-karty{
+    flex-wrap: wrap;
+    flex: auto;
+    margin-left: 1%;
+    margin-right: 1%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 1% 1%;
+    grid-auto-flow: row;
+    grid-template-areas:
+    "top1 top2 top3 top4 top5";
+}
 
-
-
+.top1{
+    grid-area: top1;
+}
+.top2{
+    grid-area: top2;
+}
+.top3{
+    grid-area: top3;
+}
+.top4{
+    grid-area: top4;
+}
+.top5{
+    grid-area: top5;
+}
 
 
 
@@ -176,15 +208,13 @@ background-color: darksalmon;
 }
 
 .kontener-siatka{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 1% 1%;
-    grid-auto-flow: row;
-    grid-template-areas:
-      "empty slider slider slider empty2"
-      "top1 top2 top3 top4 top5";
-  }
+    display: grid; 
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr; 
+    grid-template-rows: 1fr; 
+    gap: 1% 1%; 
+    grid-template-areas: 
+    "empty slider slider slider empty2"; 
+}
 .empty{
     grid-area: empty;
 }
@@ -194,29 +224,9 @@ background-color: darksalmon;
 .empty2{
     grid-area: empty2;
 }
-.top1{
-    grid-area: top1;
-}
-.top2{
-    grid-area: top2;
-}
-.top3{
-    grid-area: top3;
-}
-.top4{
-    grid-area: top4;
-}
-.top5{
-    grid-area: top5;
-}
-.empty, .empty2, .slider, .top1, .top2, .top3, .top4, .top5{
+.empty, .empty2, .slider{
     border: 1px solid darksalmon;
     margin-left: 5%;
     margin-right: 5%;
-}
-.top1, .top2, .top3, .top4, .top5{
-    margin-top: 2%;
-}
-.empty, .empty2, .slider{
     margin-bottom: 2%;
 }
