--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ background: linear-gradient(120deg, darksalmon, #E97A95);
 .a {
     color: whitesmoke;
 }
+
 .kontener {
     width: 700px;
     max-width: 100%;
@@ -52,17 +53,10 @@ background: linear-gradient(120deg, darksalmon, #E97A95);
     padding: 3px;
 }
 .ranking-karty{
+    display: flex;  
     flex-wrap: wrap;
-    flex: auto;
-    margin-left: 1%;
-    margin-right: 1%;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 1% 1%;
-    grid-auto-flow: row;
-    grid-template-areas:
-    "top1 top2 top3 top4 top5";
+    align-items: center;
+    justify-content: center;
 }
 
 .top1{
@@ -81,6 +75,67 @@ background: linear-gradient(120deg, darksalmon, #E97A95);
     grid-area: top5;
 }
 
+/* Footer */
+.footer-basic {
+    padding:40px 0;;
+    color:#151515;
+    background: linear-gradient(120deg, darksalmon, #E97A95);
+    margin-top: 1%;
+  }
+  
+  .footer-basic ul {
+    padding:0;
+    list-style:none;
+    text-align:center;
+    font-size:18px;
+    line-height:1.6;
+    margin-bottom:0;
+  }
+  
+  .footer-basic li {
+    padding:0 10px;
+  }
+  
+  .footer-basic ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-basic .social {
+    text-align:center;
+    padding-bottom:25px;
+  }
+  
+  .footer-basic .social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #ccc;
+    margin:0 8px;
+    color:inherit;
+    opacity:0.75;
+  }
+  
+  .footer-basic .social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:rgb(64, 64, 64);
+    margin-bottom:0;
+  }
 
 
 /* Animacja */
@@ -229,4 +284,245 @@ background: linear-gradient(120deg, darksalmon, #E97A95);
     margin-left: 5%;
     margin-right: 5%;
     margin-bottom: 2%;
+}
+
+/* scrollbar http://webkit-scroll-gen.sourceforge.net/ */
+
+::-webkit-scrollbar {
+    width: 0.95vw;
+    height: 2px;
+  }
+  ::-webkit-scrollbar-button {
+    width: 0px;
+    height: 0px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background: #dd5065;
+    border: 0px none #ffffff;
+    border-radius: 50px;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    background: #ec9274;
+  }
+  ::-webkit-scrollbar-thumb:active {
+    background: #000000;
+  }
+  ::-webkit-scrollbar-track {
+    background: #df967a;
+    border: 0px solid #e9967a;
+    border-radius: 50px;
+  }
+  ::-webkit-scrollbar-track:hover {
+    background: #e1714b;
+  }
+  ::-webkit-scrollbar-track:active {
+    background: #333333;
+  }
+  ::-webkit-scrollbar-corner {
+    background: transparent;
+  }
+
+  /* amogus */
+  
+  .karta{
+    height: 388px;
+    width: 200px;
+    margin: 5px;
+    background: rgb(231,69,92); 
+    background: radial-gradient(circle, rgba(231,69,92,1) 23%, rgba(233,150,122,1) 100%);
+  }
+  .kartazdjecie {
+      width: 198px;
+      height: 132px;
+  }
+  a.klej {
+    position:absolute; 
+    bottom: 24px;
+  }
+
+
+
+
+
+
+  /* Formularz kontaktowy */
+  /* Formularz kontaktowy */
+  /* Formularz kontaktowy */
+
+  .form-positioning{
+      padding: 10px;
+      margin-left: 2%;
+      margin-right: 2%;
+      margin-bottom: 1%;
+      margin-top: 1%;
+     border: 1px solid darksalmon;
+     width: 40%;
+     margin: auto;
+  }
+.input-style{
+    background-color: #3c4144;
+    color: darksalmon;
+    border: 1px solid #222425;
+}
+
+#_checkbox {
+    display: none;
+  }
+  
+  .label-checkbox {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    background-color: #f72414;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    box-shadow: 0 7px 10px #ffbeb8;
+    cursor: pointer;
+    transition: 0.2s ease transform, 0.2s ease background-color,
+      0.2s ease box-shadow;
+    overflow: hidden;
+    z-index: 1;
+  }
+  
+  label:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    left: 0;
+    width: 70px;
+    height: 70px;
+    margin: 0 auto;
+    background-color: #fff;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    box-shadow: inset 0 7px 10px #ffbeb8;
+    transition: 0.2s ease width, 0.2s ease height;
+  }
+  
+  label:hover:before {
+    width: 55px;
+    height: 55px;
+    box-shadow: inset 0 7px 10px #ff9d96;
+  }
+  
+  label:active {
+    transform: translateY(-50%) scale(0.9);
+  }
+  
+  #tick_mark {
+    position: absolute;
+    top: -1px;
+    right: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    margin: 0 auto;
+    margin-left: 14px;
+    transform: rotateZ(-40deg);
+  }
+  
+  #tick_mark:before,
+  #tick_mark:after {
+    content: "";
+    position: absolute;
+    background-color: #fff;
+    border-radius: 2px;
+    opacity: 0;
+    transition: 0.2s ease transform, 0.2s ease opacity;
+  }
+  
+  #tick_mark:before {
+    left: 0;
+    bottom: 0;
+    width: 10px;
+    height: 30px;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.23);
+    transform: translateY(-68px);
+  }
+  
+  #tick_mark:after {
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 10px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.23);
+    transform: translateX(78px);
+  }
+  
+  #_checkbox:checked + label {
+    background-color: #07d410;
+    box-shadow: 0 7px 10px #92ff97;
+  }
+  
+  #_checkbox:checked + label:before {
+    width: 0;
+    height: 0;
+  }
+  
+  #_checkbox:checked + label #tick_mark:before,
+  #_checkbox:checked + label #tick_mark:after {
+    transform: translate(0);
+    opacity: 1;
+  }
+  
+
+/*PRZYCISK*/
+
+.div-srodek{
+    justify-content: center;
+}
+
+.button-64 {
+  align-items: center;
+  background-image: linear-gradient(120deg, darksalmon, #E97A95);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 3px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+  margin: auto;
+}
+
+.button-64:active,
+.button-64:hover {
+  outline: 0;
+}
+
+.button-64 span {
+  background-color: rgb(5, 6, 45);
+  padding: 16px 24px;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
+}
+
+.button-64:hover span {
+  background: none;
+}
+
+@media (min-width: 768px) {
+  .button-64 {
+    font-size: 24px;
+    min-width: 196px;
+  }
 }
