--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,13 @@ background: linear-gradient(120deg, darksalmon, #E97A95);
 .a {
     color: whitesmoke;
 }
-
+p.srodek {
+  margin: 8px;
+}
+p.autor {
+  font-size: 60%;
+  margin: 0;
+}
 .kontener {
     width: 700px;
     max-width: 100%;
@@ -250,115 +256,11 @@ background: linear-gradient(120deg, darksalmon, #E97A95);
     border: 1px solid #222425;
 }
 
-#_checkbox {
-    display: none;
-  }
-  
-  .label-checkbox {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    left: 0;
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-    background-color: #f72414;
-    transform: translateY(-50%);
-    border-radius: 50%;
-    box-shadow: 0 7px 10px #ffbeb8;
-    cursor: pointer;
-    transition: 0.2s ease transform, 0.2s ease background-color,
-      0.2s ease box-shadow;
-    overflow: hidden;
-    z-index: 1;
-  }
-  
-  label:before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    right: 0;
-    left: 0;
-    width: 70px;
-    height: 70px;
-    margin: 0 auto;
-    background-color: #fff;
-    transform: translateY(-50%);
-    border-radius: 50%;
-    box-shadow: inset 0 7px 10px #ffbeb8;
-    transition: 0.2s ease width, 0.2s ease height;
-  }
-  
-  label:hover:before {
-    width: 55px;
-    height: 55px;
-    box-shadow: inset 0 7px 10px #ff9d96;
-  }
-  
-  label:active {
-    transform: translateY(-50%) scale(0.9);
-  }
-  
-  #tick_mark {
-    position: absolute;
-    top: -1px;
-    right: 0;
-    left: 0;
-    width: 60px;
-    height: 60px;
-    margin: 0 auto;
-    margin-left: 14px;
-    transform: rotateZ(-40deg);
-  }
-  
-  #tick_mark:before,
-  #tick_mark:after {
-    content: "";
-    position: absolute;
-    background-color: #fff;
-    border-radius: 2px;
-    opacity: 0;
-    transition: 0.2s ease transform, 0.2s ease opacity;
-  }
-  
-  #tick_mark:before {
-    left: 0;
-    bottom: 0;
-    width: 10px;
-    height: 30px;
-    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.23);
-    transform: translateY(-68px);
-  }
-  
-  #tick_mark:after {
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 10px;
-    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.23);
-    transform: translateX(78px);
-  }
-  
-  #_checkbox:checked + label {
-    background-color: #07d410;
-    box-shadow: 0 7px 10px #92ff97;
-  }
-  
-  #_checkbox:checked + label:before {
-    width: 0;
-    height: 0;
-  }
-  
-  #_checkbox:checked + label #tick_mark:before,
-  #_checkbox:checked + label #tick_mark:after {
-    transform: translate(0);
-    opacity: 1;
-  }
-  
+
 
 /*PRZYCISK*/
 
-.div-srodek{
+.srodek{
     justify-content: center;
 }
 
@@ -411,3 +313,53 @@ background: linear-gradient(120deg, darksalmon, #E97A95);
     min-width: 196px;
   }
 }
+
+
+
+/*ONAS ONAS ONAS ONAS ONAS ONAS ONAS NOAS*/
+
+
+.onas-main {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr) 3fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  }
+  
+.onas-tytul{
+  grid-area: 1 / 1 / 2 / 3;
+  color: darksalmon;
+  }
+.onas-opis{
+  grid-area: 2 / 1 / 3 / 3;
+  color: darksalmon;
+}
+.onas-lukasz{
+  grid-area: 3 / 1 / 4 / 2;
+  color: darksalmon;
+}
+.onas-olek{
+  grid-area: 3 / 2 / 4 / 3;
+  color: darksalmon;
+}
+
+  .onas-lukasz, .onas-olek{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    }
+    
+    .onas-zdjarticle { grid-area: 1 / 1 / 2 / 2; }
+    .onas-opisarticle { grid-area: 2 / 1 / 3 / 2; }
+    .onas-zdjarticle > img{
+      justify-content: center;
+    }
+    .onas-opis > article{
+      margin-left: 30%;
+      margin-right: 30%;
+    }
+    .onas-tytul > h2{
+      text-align: center;
+    }
