--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ p.autor {
   /* amogus */
   
   .karta{
-    height: 420px;
+    height: 430px;
     width: 200px;
     margin: 5px;
     background: rgb(231,69,92); 
@@ -232,8 +232,9 @@ p.autor {
   a.kartaz {
     color: whitesmoke;
   }
-
-
+  .card-body {
+    padding: 0.75rem;
+  }
 
 
   /* Formularz kontaktowy */
